remove added books

--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 *{
   box-sizing: border-box;
   margin: 0;
-  padding: 5px;
+  padding: 1.5px;
   list-style: none;
   
+}
+hr{
+  margin-top: 10px;
 }
