--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@
 }
 
 .menu-awesome {
-  border-right: 2px solid black;
   width: 50%;
   padding-left: 10px;
 }
@@ -95,17 +94,18 @@ body {
   background-image: url(./image/books.jpg);
   background-size: 100% 100%;
   font-family: cursive;
+  flex-direction: column;
 }
 
 main {
   display: flex;
   align-items: center;
   flex-direction: column;
-  width: 60%;
   height: 100vh;
   background: rgba(255, 255, 255, 0.2);
-  padding: 50px 30px;
   border: 2.5px solid;
+  min-width: 40%;
+  justify-content: center;
 }
 
 .heading {
