--- a/style.css
+++ b/style.css
@@ -15,7 +15,9 @@
 
 .menu-awesome {
   width: 50%;
-  padding-left: 10px;
+  padding: 5px 2px;
+  font-size: 20px;
+  font-weight: bold;
 }
 
 .menu-list {
@@ -23,6 +25,9 @@
   text-align: center;
   cursor: pointer;
   border-right: 2px solid black;
+  padding: 10px 2px;
+  font-size: 16px;
+  font-weight: bold;
 }
 
 .menu-add {
@@ -30,12 +35,17 @@
   text-align: center;
   cursor: pointer;
   border-right: 2px solid black;
+  padding: 10px 2px;
+  font-size: 16px;
+  font-weight: bold;
 }
 
 .menu-contact {
   text-align: center;
   cursor: pointer;
-  text-decoration: tomato;
+  padding: 10px 2px;
+  font-size: 16px;
+  font-weight: bold;
 }
 
 .d-none {
@@ -43,18 +53,16 @@
 }
 
 .list-display {
-  width: 100%;
-  border: 1px solid yellow;
+  width: 70%;
 }
 
 #Result {
-  border: solid 2px;
-  width: 60%;
+  border: solid 4px;
+  width: 100%;
   height: auto;
   display: flex;
   flex-direction: column;
   padding: 20px;
-  margin-bottom: 30px;
 }
 
 #Result li:nth-child(odd) {
@@ -105,7 +113,6 @@ main {
   background: rgba(255, 255, 255, 0.2);
   border: 2.5px solid;
   min-width: 40%;
-  justify-content: center;
 }
 
 .heading {
@@ -115,13 +122,6 @@ main {
   padding-top: 30px;
   margin-bottom: 20px;
   font-family: "Times New Roman", Times, serif;
-}
-
-.heading1 {
-  font-family: cursive;
-  font-size: 18px;
-  font-weight: 700;
-  padding-bottom: 7px;
 }
 
 .add-button,
@@ -144,7 +144,7 @@ main {
   flex-direction: row;
   align-items: center;
   justify-content: start;
-  padding-top: 2px;
+  padding: 4px 6px;
 }
 
 .book-title {
@@ -163,6 +163,25 @@ main {
   font-family: "Times New Roman", Times, serif;
 }
 
+.all-a-books, h2 {
+  font-family: cursive;
+  font-size: 25px;
+  text-align: center;
+  font-weight: bold;
+  margin-top: 40px;
+  margin-bottom: 10px;
+}
+
+.infos {
+  padding-left: 20px;
+  font-weight: bold;
+}
+
+.infos li {
+  list-style: circle;
+  font-weight: bold;
+}
+
 .byclass {
   padding-right: 8px;
   font-size: 16px;
@@ -172,12 +191,12 @@ main {
 
 @media screen and (max-width: 950) {
   #Result {
-    border: solid 2px;
-    width: 60%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-    margin-bottom: 30px;
+  border: solid 2px;
+  width: 60%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  margin-bottom: 30px;
   }
 }
