--- a/style.css
+++ b/style.css
@@ -6,75 +6,14 @@
   color: black;
 }
 
-.menu {
-  display: flex;
-  flex-direction: row;
-  width: 60%;
-  border: 2px solid black;
-}
-
-.menu-awesome {
-  width: 50%;
-  padding: 5px 2px;
-  font-size: 20px;
-  font-weight: bold;
-}
-
-.menu-list {
-  width: 15%;
-  text-align: center;
-  cursor: pointer;
-  border-right: 2px solid black;
-  padding: 10px 2px;
-  font-size: 16px;
-  font-weight: bold;
-}
-
-.menu-add {
-  width: 18%;
-  text-align: center;
-  cursor: pointer;
-  border-right: 2px solid black;
-  padding: 10px 2px;
-  font-size: 16px;
-  font-weight: bold;
-}
-
-.menu-contact {
-  text-align: center;
-  cursor: pointer;
-  padding: 10px 2px;
-  font-size: 16px;
-  font-weight: bold;
-}
-
-.d-none {
-  display: none;
-}
-
-.list-display {
-  width: 70%;
-}
-
-/* IDs section */
-
-.infos {
-  padding-left: 20px;
-  font-weight: bold;
-}
-
-.infos li {
-  list-style: circle;
-  font-weight: bold;
-}
-
 #Result {
-  border: solid 4px;
-  width: 100%;
+  border: solid 2px;
+  width: 60%;
   height: auto;
   display: flex;
   flex-direction: column;
   padding: 20px;
+  margin-bottom: 30px;
 }
 
 #Result li:nth-child(odd) {
@@ -114,17 +53,17 @@ body {
   background-image: url(./image/books.jpg);
   background-size: 100% 100%;
   font-family: cursive;
-  flex-direction: column;
 }
 
 main {
   display: flex;
   align-items: center;
   flex-direction: column;
+  width: 60%;
   height: 100vh;
   background: rgba(255, 255, 255, 0.2);
+  padding: 50px 30px;
   border: 2.5px solid;
-  min-width: 40%;
 }
 
 .heading {
@@ -133,7 +72,14 @@ main {
   font-size: 40px;
   padding-top: 30px;
   margin-bottom: 20px;
-  font-family: "Times New Roman", Times, serif;
+  font-family: 'Times New Roman', Times, serif;
+}
+
+.heading1 {
+  font-family: cursive;
+  font-size: 18px;
+  font-weight: 700;
+  padding-bottom: 7px;
 }
 
 .add-button,
@@ -156,7 +102,7 @@ main {
   flex-direction: row;
   align-items: center;
   justify-content: start;
-  padding: 4px 6px;
+  padding-top: 2px;
 }
 
 .book-title {
@@ -164,7 +110,7 @@ main {
   margin-right: 0.5rem;
   font-size: 16px;
   font-weight: bolder;
-  font-family: "Times New Roman", Times, serif;
+  font-family: 'Times New Roman', Times, serif;
 }
 
 .author-name {
@@ -172,24 +118,14 @@ main {
   margin-right: auto;
   font-size: 16px;
   font-weight: bolder;
-  font-family: "Times New Roman", Times, serif;
-}
-
-.all-a-books,
-h2 {
-  font-family: cursive;
-  font-size: 25px;
-  text-align: center;
-  font-weight: bold;
-  margin-top: 40px;
-  margin-bottom: 10px;
+  font-family: 'Times New Roman', Times, serif;
 }
 
 .byclass {
   padding-right: 8px;
   font-size: 16px;
   font-weight: bolder;
-  font-family: "Times New Roman", Times, serif;
+  font-family: 'Times New Roman', Times, serif;
 }
 
 @media screen and (max-width: 950) {
