--- a/style.css
+++ b/style.css
@@ -6,14 +6,64 @@
   color: black;
 }
 
-#Result {
-  border: solid 2px;
+.menu {
+  display: flex;
+  flex-direction: row;
   width: 60%;
+  border: 2px solid black;
+}
+
+.menu-awesome {
+  width: 50%;
+  padding: 5px 2px;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.menu-list {
+  width: 15%;
+  text-align: center;
+  cursor: pointer;
+  border-right: 2px solid black;
+  padding: 10px 2px;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.menu-add {
+  width: 18%;
+  text-align: center;
+  cursor: pointer;
+  border-right: 2px solid black;
+  padding: 10px 2px;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.menu-contact {
+  text-align: center;
+  cursor: pointer;
+  padding: 10px 2px;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.d-none {
+  display: none;
+}
+
+.list-display {
+  width: 70%;
+}
+
+/* IDs section */
+#Result {
+  border: solid 4px;
+  width: 100%;
   height: auto;
   display: flex;
   flex-direction: column;
   padding: 20px;
-  margin-bottom: 30px;
 }
 
 #Result li:nth-child(odd) {
@@ -46,6 +96,7 @@
   font-weight: bold;
 }
 
+/* Class section */
 body {
   display: flex;
   align-content: center;
@@ -53,17 +104,17 @@ body {
   background-image: url(./image/books.jpg);
   background-size: 100% 100%;
   font-family: cursive;
+  flex-direction: column;
 }
 
 main {
   display: flex;
   align-items: center;
   flex-direction: column;
-  width: 60%;
   height: 100vh;
   background: rgba(255, 255, 255, 0.2);
-  padding: 50px 30px;
   border: 2.5px solid;
+  min-width: 40%;
 }
 
 .heading {
@@ -72,14 +123,7 @@ main {
   font-size: 40px;
   padding-top: 30px;
   margin-bottom: 20px;
-  font-family: 'Times New Roman', Times, serif;
-}
-
-.heading1 {
-  font-family: cursive;
-  font-size: 18px;
-  font-weight: 700;
-  padding-bottom: 7px;
+  font-family: "Times New Roman", Times, serif;
 }
 
 .add-button,
@@ -102,7 +146,7 @@ main {
   flex-direction: row;
   align-items: center;
   justify-content: start;
-  padding-top: 2px;
+  padding: 4px 6px;
 }
 
 .book-title {
@@ -110,7 +154,7 @@ main {
   margin-right: 0.5rem;
   font-size: 16px;
   font-weight: bolder;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: "Times New Roman", Times, serif;
 }
 
 .author-name {
@@ -118,14 +162,25 @@ main {
   margin-right: auto;
   font-size: 16px;
   font-weight: bolder;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: "Times New Roman", Times, serif;
 }
+
+.all-a-books,
+h2 {
+  font-family: cursive;
+  font-size: 25px;
+  text-align: center;
+  font-weight: bold;
+  margin-top: 40px;
+  margin-bottom: 10px;
+}
+
 
 .byclass {
   padding-right: 8px;
   font-size: 16px;
   font-weight: bolder;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: "Times New Roman", Times, serif;
 }
 
 @media screen and (max-width: 950) {
